statping/statping.yml
apiVersion: v1
kind: Service
metadata:
  name: statping
  labels:
    run: statping
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: statping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statping
spec:
  selector:
    matchLabels:
      run: statping
  replicas: 1
  template:
    metadata:
      labels:
        run: statping
    spec:
      containers:
      - name: statping
        image: statping/statping:v0.90.71
        ports:
          - containerPort: 8080
      restartPolicy: Always
