statping/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - statping.anrop.se
      - status.anrop.se
      secretName: statping-tls
  rules:
    - host: statping.anrop.se
      http:
        paths:
        - backend:
            serviceName: statping
            servicePort: 8080
    - host: status.anrop.se
      http:
        paths:
        - backend:
            serviceName: statping
            servicePort: 8080
